<resources>
    <string name="app_name">RadioCar</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="station_detail_bitrate" translatable="false">%1$1d kbps</string>
    <string name="station_detail_broken" translatable="false">INDISPONIBLE</string>
    <string name="station_detail_deleted_on_server" translatable="false">SUPPRIMÉ</string>

    <string name="symbol_radio" translatable="false">&#128251;</string>
    <string name="notification_radio_description">The best Car radio 🚗</string>

    <string name="weather_unavailable">Weather service isnt available</string>

    <string name="confirm_exit">Are you certain that you wish to exit the application?</string>

    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>


    <string name="settings_display_on">Keep display active</string>
    <string name="settings_autoplay">Play automatically when a Bluetooth device is connected</string>
    <string name="settings_show_station_in_back">Display popup station name in background</string>
    <string name="settings_display_speed_units">Display speed in units:</string>
    <string name="km_h">km/h</string>
    <string name="mph">MPH</string>

    <string name="settings_display_temperature_units">Display temperature in units:</string>
    <string name="celsium_unit" translatable="false">°C</string>
    <string name="fahrenheit_unit" translatable="false">°F</string>

    <string name="error_500">Internal Server Error</string>
    <string name="error_503">Service temporary Unavailable</string>
    <string name="radio_service_not_available">Our radio search is temporarily down. Enjoy these handpicked stations for now!</string>
    <string name="error_no_address">No address associated with hostname</string>

    <string name="country">Country</string>
    <string name="country_not_selected">Not selected</string>

    <string name="car_logo">Logo</string>
    <string name="car_logo_not_selected">Not selected</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="open_api">Open API</string>
    <string name="open_play_market">Leave a review</string>

    <string name="contact_us">Contact Us</string>

    <string name="about_app">About app</string>

    <string name="description"><b>Radio Car:</b> Your ideal travel companion on the road!</string>

    <string name="created_by" translatable="false"><b>© 2025 Maestro Creations</b></string>
    <string name="app_version"><b>App version</b></string>


    <string name="playback_error">Playback error</string>
    <string name="radio_stream_unavailable">This stream is temporary unavailable</string>

    <string name="close">Close</string>
    <string name="choose_country">Choose country</string>

    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="remove_ask">Remove?</string>

    <string name="done">Done</string>

    <string name="mock_date">07 jul 2024 \n Friday</string>
    <string name="title_activity_main_v2">MainActivityV2</string>

    <string name="enter_custom_tag">Enter your custom tag (in English)</string>
    <string name="enter_station_name">Enter station name</string>
    <string name="select_country">Select country</string>
    <string name="select_tag">Select tag</string>

    <string name="delete_station_title">Delete station</string>
    <string name="delete_station_message">Are you sure you want to delete the station %1$s?</string>
    <string name="confirm">Delete</string>


    <string-array name="tag_keys">
            <item>ambient</item>
            <item>bible</item>
            <item>christ</item>
            <item>classical</item>
            <item>children</item>
            <item>dance</item>
            <item>electronic</item>
            <item>hiphop</item>
            <item>jazz</item>
            <item>metal</item>
            <item>music</item>
            <item>news</item>
            <item>pop</item>
            <item>relax</item>
            <item>rock</item>
            <item>talk</item>
        </string-array>

        <string-array name="tag_values">
            <item>Ambient</item>
            <item>Bible</item>
            <item>Christian</item>
            <item>Classical</item>
            <item>Children</item>
            <item>Dance</item>
            <item>Electronic</item>
            <item>Hip-hop</item>
            <item>Jazz</item>
            <item>Metal</item>
            <item>Music</item>
            <item>News</item>
            <item>Pop</item>
            <item>Relax</item>
            <item>Rock</item>
            <item>Talk / Podcasts</item>
        </string-array>

    <string name="all_countries">All Countries</string>

</resources>