<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_settings_bg"
    tools:context=".ui.main.SettingsFragment">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btClose"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:alpha="0.7"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:src="@drawable/ic_close"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="48dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:src="@drawable/radio_car_for"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/btLogo">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swDisplayActive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_display_on"
                android:textColor="@color/white"
                android:textSize="@dimen/settings_text_main_size"
                android:theme="@style/ThemeOverlay.AppCompat"
                app:thumbTint="@color/switch_thumb_tint"
                app:trackTint="@color/switch_track_tint" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark"
                android:visibility="visible"
                android:layout_marginEnd="46dp"
                android:layout_marginVertical="@dimen/settings_divider_margin"
                />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swAutoplay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_autoplay"
                android:textColor="@color/white"
                android:textSize="@dimen/settings_text_main_size"
                android:theme="@style/ThemeOverlay.AppCompat"
                app:thumbTint="@color/switch_thumb_tint"
                app:trackTint="@color/switch_track_tint" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark"
                android:visibility="visible"
                android:layout_marginEnd="46dp"
                android:layout_marginVertical="@dimen/settings_divider_margin"
                />
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/settings_text_main_size"
                android:text="@string/settings_display_speed_units"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                >


                <RadioButton
                    android:id="@+id/rbKmh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/switch_radio_tint"
                    tools:checked="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/settings_text_option_size"
                    android:text="@string/km_h"/>

                <RadioButton
                    android:id="@+id/rbMph"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/switch_radio_tint"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/settings_text_option_size"
                    android:text="@string/mph"/>

            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray_dark"
                android:visibility="visible"
                android:layout_marginEnd="46dp"
                android:layout_marginVertical="@dimen/settings_divider_margin"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/settings_text_main_size"
                android:text="@string/settings_display_temperature_units"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:layout_marginBottom="10dp"
                >


                <RadioButton
                    android:id="@+id/rbCelsium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/switch_radio_tint"
                    android:textColor="@color/white"
                    android:textSize="@dimen/settings_text_option_size"
                    android:text="@string/celsium_unit"/>

                <RadioButton
                    android:id="@+id/rbFahrenheit"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:buttonTint="@color/switch_radio_tint"
                    android:textColor="@color/white"
                    android:textSize="@dimen/settings_text_option_size"
                    android:text="@string/fahrenheit_unit"/>

            </RadioGroup>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>